<resources>
    <string name="app_name">Carmo Neighborhood</string>
    <string name="app_title">Carmo Neighborhood - Services</string>

    <string name="categoria_academia">Gym</string>
    <string name="categoria_restaurante">Restaurant</string>
    <string name="categoria_veterinaria">Veterinary / Pet-shop</string>
    <string name="categoria_supermercado">Supermarket</string>
    <string name="categoria_bar">Bar</string>
    <string name="categoria_escola">English School</string>

    <string name="label_endereco">Address</string>
    <string name="label_telefone">Phone</string>
    <string name="label_site">Website</string>

    <string name="acao_ligar">Call</string>
    <string name="acao_abrir_site">Open Website</string>
    <string name="acao_ver_mapa">View on Map</string>
    <string name="acao_voltar">Back</string>

    <string name="cad_escolher_foto">Choose Photo</string>
    <string name="cad_nome">Business name</string>
    <string name="cad_categoria">Category</string>
    <string name="cad_endereco">Address</string>
    <string name="cad_telefone">Phone</string>
    <string name="cad_site">Website</string>
    <string name="cad_pluscode">Plus Code</string>
    <string name="cad_salvar">Save</string>

</resources>
